fixed spacing issue

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -323,7 +323,7 @@ header {
   }
 
   ul {
-    max-width: 400px;
+    max-width: 380px;
   }
 
   span {
